# Fission-DNN

./: CMakeLists.txt  README.md  main.cpp
common/: \  common.hpp  cudnn.cpp  cudnn.hpp  math_function.cpp  math_function.hpp  nDMatrix.cpp  nDMatrix.hpp  syncedmem.cpp  syncedmem.hpp
common/util/: db.cpp  db.hpp  db_lmdb.cpp  db_lmdb.hpp  format.hpp  util.cu  util.cuh
config/: configBase.hpp  config_table.cpp
dataTransFormer/: data_transformer.cpp  data_transformer.hpp
examples/cifar10/: cifar10.cpp  cifar10.hpp
examples/mnist/: convert_mnist_data.cpp  convert_mnist_data.hpp  runMnist.cpp  runMnist.hpp
layers/: LRNLayer.cu  LRNLayer.hpp  activationLayer.cu  activationLayer.hpp  convLayer.cu  convLayer.hpp  dataLayer.cu  dataLayer.hpp  dropOutLayer.cu  dropOutLayer.hpp  hiddenLayer.cu  hiddenLayer.hpp  layer.cpp  layer.hpp  poolLayer.cu  poolLayer.hpp  softMaxLayer.cu  softMaxLayer.hpp
net/: net.cpp  net.hpp
profile/cifar10/: Cifar10Config.txt
profile/mnist/: MnistConfig.txt
profile/mnsit/: MnistConfig.txt
proto/: datum.proto
readData/cifar10/: data_reader.cpp  data_reader.hpp
readData/mnist/: data_reader.cpp  data_reader.hpp
test/: test.cpp  test.hpp
